force-app/main/default/objects/Order/fields/IFI_Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>IFI_Bill_To_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bill To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders Bill To</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>