force-app/main/default/objects/Order/fields/IFI_ContractID__c.field-meta.xml
<CustomField>
    <fullName>IFI_ContractID__c</fullName>
    <formula>Opportunity.IFI_ContractID__c</formula>
    <label>Contract ID</label>
    <type>Text</type>
</CustomField>