force-app/main/default/objects/Order/fields/IFI_Location__c.field-meta.xml
<CustomField>
    <fullName>IFI_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Location</label>
    <referenceTo>IFI_Location__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>