force-app/main/default/objects/Order/fields/IFI_ProjectID__c.field-meta.xml
<CustomField>
    <fullName>IFI_ProjectID__c</fullName>
    <formula>Opportunity.IFI_UltimateParentProjectID__c</formula>
    <label>Project ID</label>
    <type>Text</type>
</CustomField>